--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,23 @@
     background-color: #292929;
     padding: 0px 50px 0px 50px;
     color: white;
+    margin: 0;
   }
 .baga{
   display: none;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+.navbar a{
+  color: white;
+  text-decoration: none;
+}
+
 .site-head{
- width:91%;
+ width:92.1%;
   top: 0px;
   position: fixed;
     background-color:#3f3f3f;
@@ -147,6 +158,9 @@ img {vertical-align: middle;} */
       display: block;
       margin-bottom: 20px;
     }
+    .site-head{
+      width: 100%;
+    }
 
     .baga {
       display: inline-block;
@@ -239,4 +253,46 @@ padding: 10px;
 .footer{
     text-align: center;
     bottom: 0;
+}
+
+
+
+.rows {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.columns {
+  -ms-flex: 25%; /* IE10 */
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.columns img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .columns {
+    -ms-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .columns {
+    -ms-flex: 100%;
+    flex: 100%;
+    max-width: 100%;
+  }
 }
