--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #292929;
+  padding: 0px 50px 0px 50px;
+  color: white;
+  margin: 0;
+}
 
-  body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #292929;
-    padding: 0px 50px 0px 50px;
-    color: white;
-    margin: 0;
-  }
-.baga{
+.baga {
   display: none;
 }
 
@@ -14,61 +14,81 @@
   box-sizing: border-box;
 }
 
-.navbar a{
+.navbar a {
   color: white;
   text-decoration: none;
 }
 
-.site-head{
- width:92.1%;
+.site-head {
+  width: 92.1%;
   top: 0px;
   position: fixed;
-    background-color:#3f3f3f;
+  background-color: #3f3f3f;
+  /* background-image: url(./images/food6.jpg); */
+  z-index: 1;
 }
 
-.site-head p{
+/* .site-head {
+  
+} */
+p a {
+  color: #fff;
+}
+
+.content h3 {
+  text-align: center;
+}
+
+.site-head p {
   float: right;
   margin-right: 50px;
-}
-.site-head h2{
-    text-align: center;
-}
-   
-    
-
-
-.container{
-    padding-top: 50px;
-   background-color: #454545;
-    padding-bottom: 50px;
-    margin-top: 160px;
+  color: white;
 }
 
-.navbar{
-    text-align: center ;
-    height: 61px;
- 
-    
-}
+.site-head h2 {
+  text-align: center;
 
-.navbar li{
-    display: inline-block;
-    padding: 20px 30px 20px 30px;
+  color: white;
 }
 
 
+.contains {
+  background-color: #3f3f3f;
+  opacity: 0.9;
+  z-index: 1;
+}
 
-/* 
-* {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
-.mySlides {display: none;}
-img {vertical-align: middle;} */
+.container {
+
+  padding-bottom: 50px;
+  margin-top: 160px;
+  background-image: url(./images/food6.jpg);
+}
+
+.navbar {
+  text-align: center;
+  height: 61px;
+
+
+}
+
+.navbar li {
+  display: inline-block;
+  padding: 20px 30px 20px 30px;
+}
+
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 600px;
   position: relative;
   margin: auto;
+
+}
+
+.slideshow-container img {
+  text-align: center;
+  width: 100%;
 }
 
 /* Caption text */
@@ -82,14 +102,6 @@ img {vertical-align: middle;} */
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
-/* .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-} */
 
 /* The dots/bullets/indicators */
 .dot {
@@ -109,165 +121,124 @@ img {vertical-align: middle;} */
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
+  -webkit-animation-duration: 2.0s;
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 2.0s;
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
 }
 
 @keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
 }
 
 
 
-/* 
 
-  * {
-    box-sizing: border-box;
-  } */
-  
-  
-  /* Float four columns side by side */
-  .column {
-    /* float: left; */
-    margin: auto;
+/* Float four columns side by side */
+.column {
+
+  margin: auto;
+  display: inline-block;
+  width: 25%;
+  padding: 0 10px;
+}
+
+
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 650px) {
+
+  .site-head {
+    width: 100%;
+  }
+
+  .baga {
     display: inline-block;
-    width: 25%;
-    padding: 0 10px;
+    font-size: 35px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: grey;
+    background-color: rgb(225, 231, 229);
+    cursor: pointer;
+    width: 30px;
+    margin-right: 1px;
   }
-  /* Remove extra left and right margins, due to padding */
-  
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
+
+
+  .navbar li {
+    display: none;
   }
-  
-  /* Responsive columns */
-  @media screen and (max-width: 650px) {
-   .menuOverview .column {
-      width: 100%;
-      display: block;
-      margin-bottom: 20px;
-    }
-    .site-head{
-      width: 100%;
-    }
 
-    .baga {
-      display: inline-block;
-      font-size: 35px;
-      position: absolute;
-      right: 0;
-      top: 0;
-      color: grey;
-      background-color: rgb(225, 231, 229);
-      cursor: pointer;
-      width: 30px;
-      margin-right: 1px;
-    }
-
-
-    .navbar li {
-      display: none;
-    }
-   
-.menuOverview{
-    text-align: center;
-    margin-top: 50px;
-    margin-left: 30px;
-    margin-right: 30px;
-}
-
-    .text {font-size: 11px}
+  .text {
+    font-size: 11px
+  }
 
   body {
-  color: white;
+    color: white;
     padding: 0px 2px 0px 2px;
-  
+
   }
 
 
-.specials .column{
-   display: block;
-padding: 10px;
-    
-}
 
-.specials .card{
-    
-    padding: 0px 90px 0px 90px;
-    
-}
-
-.specials .row{
-    margin-right: 100px;
-    
-}
-  }
-  
-  /* Style the counter cards */
-  .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 16px;
-    text-align: center;
-    background-color: #f1f1f1;
-    border-radius: 10%;
-  }
-
-  .menuOverview .card{
-      height: 175px;
-  }
-
-
-.menuOverview{
-    text-align: center;
-    margin-top: 50px;
-    margin-left: 80px;
-    margin-right: 80px;
 }
 
 
-  .specials{
-      margin-left: 10px;
-      margin-right: 10px;
-      text-align: center;
-      margin-top: 60px;
-    
-  }
 
 
-  .specials .column{
-    width: 20%;
-    
+
+.specials {
+  text-align: center;
+  margin-top: 60px;
+
 }
 
-.footer{
-    text-align: center;
-    bottom: 0;
+
+
+.footer {
+  text-align: center;
+  bottom: 0;
 }
 
 
 
 .rows {
-  display: -ms-flexbox; /* IE10 */
+  display: -ms-flexbox;
+  /* IE10 */
   display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
+  -ms-flex-wrap: wrap;
+  /* IE10 */
   flex-wrap: wrap;
   padding: 0 4px;
 }
 
 /* Create four equal columns that sits next to each other */
 .columns {
-  -ms-flex: 25%; /* IE10 */
+  -ms-flex: 25%;
+  /* IE10 */
   flex: 25%;
   max-width: 25%;
   padding: 0 4px;
