--- a/contactUs/styles.css
+++ b/contactUs/styles.css
@@ -34,7 +34,7 @@ body {
    }
    .site-head h2{
        text-align: center;
-       /* margin-left: 156px; */
+       margin-left: 122px;
    }
       
 
