--- a/signup.css
+++ b/signup.css
@@ -19,17 +19,17 @@ hr{
     margin-bottom: 25px;
 }
 button{
-    background-color: rgb(78, 72, 72);
+    background-color: rgb(41, 36, 36);
     color: rgb(233, 224, 224);
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
     width: 100%;
-    opacity: 0.9;
+    opacity: 1;
 }
 button:hover{
-    opacity: 1;
+    opacity: 0.7;
 }
 .cancelbtn, .signupbtn{
     float: left;
@@ -37,9 +37,13 @@ button:hover{
 }
 .container{
     padding: 16px;
-    width: 600px;
-    
-    
+    width: 100%;
+    padding: 30px 350px 30px 350px;
+    background-color: gray;
+    opacity: 0.75;
+      
+}
+.form{
 }
 .signup{
     background-color: grey;
