--- a/menu/styles.css
+++ b/menu/styles.css
@@ -133,17 +133,7 @@ button{
          
       }
        
-}   
-
- /* Style the counter cards */
- .card {
-   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-   padding: 1px;
-   text-align: center;
-   background-color: #f1f1f1;
-   border-radius: 10%;
- }
-
+}  
 
  .specials{
   margin-left: 10px;
@@ -155,25 +145,56 @@ button{
 }
 
 
-.column {
-  /* float: left; */
-  margin: auto;
-  display: inline-block;
-  width: 15%;
-  padding: 0 10px;
-}
-
-
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
 
 /* footer */
 .footer{
   text-align: center;
   bottom: 0;
+  
+}
+
+
+
+
+.rows {
+  display: -ms-flexbox;
+  /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap;
+  /* IE10 */
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.columns {
+  -ms-flex: 25%;
+  /* IE10 */
+  flex: 25%;
+  max-width: 20%;
+  padding: 0 4px;
+}
+
+.columns img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .columns {
+    -ms-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .columns {
+    -ms-flex: 100%;
+    flex: 100%;
+    max-width: 100%;
+  }
 }
