--- a/menu/styles.css
+++ b/menu/styles.css
@@ -15,7 +15,7 @@
   color: white;
 }
   .container{
-    padding: 20px 20px 20px 10px;
+    padding: 20px 20px 10px 20px;
    /* background-color: #454545; */
     margin-top: 160px;
     background-image: url(./images/drinks3.jpg);
@@ -25,7 +25,7 @@
 .content{
   background-color: #292929;
   background-size: 100% 100%;
-  padding: 20px 20px 20px 10px;
+  padding: 20px 20px 5px 20px;
   opacity: 0.85;
   
 }
@@ -150,9 +150,8 @@ button{
 .footer{
   text-align: center;
   bottom: 0;
-  
+  position: relative;
 }
-
 
 
 
