--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,23 @@
 body{
     background-image: url(./images/food6.jpg);
-    /* background-repeat: no-repeat;
-    background-size: 100%; */
+   color: white;
 }
 
 .container{
     text-align: center;
-    background-color: rgba(128, 128, 128, 0.637);
-    margin: 100px 200px 0px 200px;
+    background-color: rgba(29, 28, 28, 0.637);
+    margin: 100px 0px 0px 0px;
     padding: 100px ;
 }
 
 button{
     font-size: 30px;
-    background-color: lightgray;
+    background-color: rgba(128, 128, 128, 0.616);
+    padding: 15px;
+    margin: 10px;
+    color: white;
+}
+
+img{
+    width: 5%;
 }
