--- a/menu/styles.css
+++ b/menu/styles.css
@@ -7,6 +7,21 @@
     /* display: ; */
   }
 
+.up{
+  position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:rgb(56, 58, 57);
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  box-shadow: 1px 1px 3px #999;
+  font-size: 35px;
+}
+
+
 a{
   color: white;
   text-decoration: none;
