--- a/contactUs/styles.css
+++ b/contactUs/styles.css
@@ -1,62 +1,63 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #292929;
-    padding: 0px 50px 0px 50px;
-    color: white;
-  }
-
-.navbar a{
-    color: white;
-    text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #292929;
+  padding: 0px 50px 0px 50px;
+  color: white;
 }
 
-  .container{
-    padding: 50px 20px 50px 20px;
-   background-color: #454545;
-    margin-top: 160px;
-    background-image: url(./images/break1.jpg);
+.navbar a {
+  color: white;
+  text-decoration: none;
 }
 
-
- 
-
-.site-head{
-    width:91%;
-     top: 0px;
-     position: fixed;
-       background-color:#3f3f3f;
-       
-   }
-   
-   .site-head p{
-     float: right;
-     margin-right: 50px;
-   }
-   .site-head h2{
-       text-align: center;
-       margin-left: 122px;
-   }
-      
-
-   .navbar{
-    text-align: center ;
-    height: 61px;
-    
-}
-
-.baga{
-    display: none;
-}
-
-.navbar li{
-    display: inline-block;
-    padding: 20px 30px 20px 30px;
-    
+.container {
+  padding: 50px 20px 50px 20px;
+  background-color: #454545;
+  margin-top: 160px;
+  background-image: url(./images/break1.jpg);
 }
 
 
-@media only screen and (max-width:650px){
-  .img{
+
+
+.site-head {
+  width: 91%;
+  top: 0px;
+  position: fixed;
+  background-color: #3f3f3f;
+
+}
+
+.site-head p {
+  float: right;
+  margin-right: 50px;
+}
+
+.site-head h2 {
+  text-align: center;
+  margin-left: 122px;
+}
+
+
+.navbar {
+  text-align: center;
+  height: 61px;
+
+}
+
+.baga {
+  display: none;
+}
+
+.navbar li {
+  display: inline-block;
+  padding: 20px 30px 20px 30px;
+
+}
+
+
+@media only screen and (max-width:650px) {
+  .img {
     z-index: 1;
     position: absolute;
     left: 0px;
@@ -67,74 +68,91 @@ body {
   }
 
 
-    .baga {
-        display: inline-block;
-        font-size: 35px;
-        position: absolute;
-        right: 0;
-        top: 0;
-        color: grey;
-        background-color: rgb(225, 231, 229);
-        cursor: pointer;
-        width: 30px;
-        margin-right: 1px;
-      }
+  .baga {
+    display: inline-block;
+    font-size: 35px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: grey;
+    background-color: rgb(225, 231, 229);
+    cursor: pointer;
+    width: 30px;
+    margin-right: 1px;
+  }
 
-      
-      body {
-        color: white;
-          padding: 0px 2px 0px 2px;
-        
-        }
-        
-.site-head{
-  width: 95%;
-}
 
-    .text {font-size: 11px}
-    
-    .navbar li {
-        display: none;
-      }
-
- 
-   /* Style inputs with type="text", select elements and textareas */
-   input[type=text], select, textarea {
-    width: 100%; /* Full width */
+  body {
+    color: white;
+    padding: 0px 2px 0px 2px;
 
   }
-      
-  .contact{
-    margin-top:200px ;
-  width: 100%;
+
+  .site-head {
+    width: 95%;
+  }
+
+  .text {
+    font-size: 11px
+  }
+
+  .navbar li {
+    display: none;
+  }
+
+
+  /* Style inputs with type="text", select elements and textareas */
+  input[type=text],
+  select,
+  textarea {
+    width: 100%;
+    /* Full width */
+
+  }
+
+  .contact {
+    margin-top: 200px;
+    width: 100%;
+  }
+
 }
-  
-    }
 
 
-    .contact {
-       
-      width: 50%;
-    }
+.contact {
 
-    /* Style inputs with type="text", select elements and textareas */
-input[type=text], select, textarea {
-  width: 100%; /* Full width */
-  padding: 12px; /* Some padding */ 
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 4px; /* Rounded borders */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  margin-bottom: 16px; /* Bottom margin */
-  resize: vertical ;/* Allow the user to vertically resize the textarea (not horizontally) */
-  background-color:#454545;
+  width: 50%;
+}
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text],
+select,
+textarea {
+  width: 100%;
+  /* Full width */
+  padding: 12px;
+  /* Some padding */
+  border: 1px solid #ccc;
+  /* Gray border */
+  border-radius: 4px;
+  /* Rounded borders */
+  box-sizing: border-box;
+  /* Make sure that padding and width stays in place */
+  margin-top: 6px;
+  /* Add a top margin */
+  margin-bottom: 16px;
+  /* Bottom margin */
+  resize: vertical;
+  /* Allow the user to vertically resize the textarea (not horizontally) */
+  background-color: #454545;
   color: white;
 }
-textarea{
-    height: 150px;
-    background-color:#454545;
-    color: white;
+
+textarea {
+  height: 150px;
+  background-color: #454545;
+  color: white;
 }
+
 /* Style the submit button with a specific background color etc */
 input[type=submit] {
   background-color: #3f3f3f;
@@ -147,22 +165,22 @@ input[type=submit] {
 
 /* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
-  background-color:gray;
+  background-color: gray;
 }
 
 /* Add a background color and some padding around the form */
 .container {
   border-radius: 5px;
- 
+
   padding: 20px;
 }
 
-.address{
-    float: right;
+.address {
+  float: right;
 }
 
 /* footer */
-.footer{
-    text-align: center;
-    bottom: 0;
-  }
+.footer {
+  text-align: center;
+  bottom: 0;
+}
