--- a/about form/about.css
+++ b/about form/about.css
@@ -1,6 +1,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    background-color: #292929 ;
 }
 html{
     box-sizing: border-box;
@@ -30,9 +31,16 @@ html{
 .card{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     margin: 8px;
+    border-radius: 10px;
+    color: white;
+    background-color: rgb(87, 83, 83);
+}
+.card img{
+    border-radius: 10px;
 }
 .container{
     padding: 0 16px;
+    border-radius: 10px;
 }
 .container::after, .row::after{
     content: "";
@@ -79,7 +87,8 @@ html{
    }
    .site-head h2{
        text-align: center;
-       /* margin-left: 155px; */
+        margin-left: 135px; 
+        color: white;
    }
       
    .navbar{
@@ -115,3 +124,17 @@ html{
         display: none;
       }
 }
+p a{
+    color: white;
+    text-decoration: none;
+}
+.footer {
+    text-align: center;
+    bottom: 0;
+    color: white;
+  }
+  .meet{
+      text-align: center;
+      color: white;
+  }
+  
