--- a/login form/login.css
+++ b/login form/login.css
@@ -4,7 +4,7 @@
     text-align: center;
     background-color: rgb(95, 92, 92);
     opacity: 0.85;
-    padding-top: 150px;
+    padding-top: 40px;
     
 }
 .account{
@@ -44,7 +44,10 @@ button{
     
 
 }
-
+body{
+    background-color: #292929;
+    color: white;
+}
 
 button:hover{
     opacity: 0.8;
@@ -75,13 +78,14 @@ button:hover{
     
 
 .pwd{
-    float: right;
+    /* float: right; */
     /*padding: 15px;*/
     text-decoration: none;
     color: white;
-}*/
+    margin-left: 10px;
+}
 span.pwd{
-    float: right;
+    /* float: right; */
     padding-top: 16px;
     
 }
@@ -157,4 +161,11 @@ span.pwd{
     color: white;
     text-decoration: none;
 }
-
+.puts{
+    padding: 10px;
+    width: 250px;
+    border-radius: 5px;
+}
+.remember{
+    color: white;
+}
