--- a/signupform/signup.css
+++ b/signupform/signup.css
@@ -13,6 +13,9 @@ input[type=text]: focus , input[type=password]:focus {
     background-color: #dddddd;
     outline: none;
 }
+body{
+    background-color: #292929;
+}
 
 hr{
     border: 1px solid black;
@@ -32,19 +35,21 @@ button:hover{
     opacity: 0.7;
 }
 .cancelbtn, .signupbtn{
-    float: left;
-    width: 50%;
+    /*float: left;*/
+    width: 40%;
+    text-align: center;
+    
 }
 .container{
-    padding: 16px;
+    /*padding: 16px;*/
     width: 100%;
     padding: 30px 350px 30px 350px;
     background-color: gray;
     opacity: 0.75;
-      
+    
+
 }
-.form{
-}
+
 .signup{
     background-color: grey;
     background-image: url("dine.jpg");
@@ -52,17 +57,27 @@ button:hover{
     -webkit-filter: blur(8px);*/
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
 }
 .fixit::after{
     content: "";
     clear: both;
     display: table;
 }
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 600px) {
     .cancelbtn, signupbtn {
         width: 100%;
     }
+    .container{
+        padding: 16px;
+        width: 100%;
+        /*padding: 30px 350px 30px 350px;*/
+        background-color: gray;
+        opacity: 0.75;
+        
+    
+    }
+    
 }
 
 button a{
@@ -81,5 +96,12 @@ p a{
 }
 
 .container p{
+    text-align: center;
+}
+.fixit button{
+    margin-left: 2px;
+}
+.fixit{
+    /* margin-left: 10px; */
     text-align: center;
 }
