--- a/login form/login.css
+++ b/login form/login.css
@@ -15,7 +15,7 @@
 }
 /*inputs design*/
 .user, .pwdd  {
-width: 50%;
+/* width: 50%; */
 padding: 12px 20px;
 margin: 8px 0;
 display: inline-block;
@@ -74,6 +74,8 @@ button:hover{
 .container{
     text-align: center;
     padding: 16px;
+   
+    
 } 
     
 
@@ -89,11 +91,16 @@ span.pwd{
     padding-top: 16px;
     
 }
-@media screen and (max-width: 300px){
+@media screen and (max-width: 600px){
     span.pwd{
         display: block;
         float: none;
     }
+    .puts{
+            padding: 10px;
+            width: 20px;
+            border-radius: 5px;
+        }
 }
 
 .navbar a{
