--- a/contactUs/styles.css
+++ b/contactUs/styles.css
@@ -130,12 +130,24 @@ p a{
 }
 
 
+
+
+.container {
+  padding: 50px 20px 50px 20px;
+  background-color: #454545;
+  margin-top: 100px;
+  background-image: url(./images/break1.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
 }
 
 
 .contact {
+padding-left: 70px;
+  width: 60%;
 
-  width: 50%;
 }
 
 /* Style inputs with type="text", select elements and textareas */
