login button styling

--- a/login form/login.css
+++ b/login form/login.css
@@ -101,6 +101,13 @@ span.pwd{
             width: 20px;
             border-radius: 5px;
         }
+
+        .login{
+         padding-right: 55px;
+            
+            
+        
+        }
 }
 
 .navbar a{
