--- a/login form/login.css
+++ b/login form/login.css
@@ -7,6 +7,11 @@
     padding-top: 40px;
     
 }
+
+a{
+    color: white;
+    text-decoration: none;
+}
 .account{
     background-color: hotpink;
     background-image: url(dine.jpg);
