--- a/menu/styles.css
+++ b/menu/styles.css
@@ -5,7 +5,9 @@ body {
   color: white;
 
 }
-
+.newboxes-2{
+  display: none;
+}
 /* 
 .up{
   position:fixed;
@@ -260,4 +262,159 @@ input[type=text]:focus {
 #list {
   font-size: 1.5em;
   margin-left: 90px;
+}
+
+
+
+.show-cart li {
+  display: flex;
+}
+
+.shop-item-button{
+  font-size: 15px;
+  background-color: #3f3f3f;
+  border-radius: 5%;
+}
+
+
+
+
+.btn-purchase {
+  text-align: center;
+  vertical-align: middle;
+  padding: 0.67em 0.67em;
+  cursor: pointer;
+  background-color: #3f3f3f;
+  border-radius: 5px;
+}
+
+
+
+
+.shop-item {
+  margin: 30px;
+}
+
+.shop-item-title {
+  display: block;
+  width: 100%;
+  text-align: center;
+  font-size: 1.5em;
+  color: #fff;
+  margin-bottom: 15px;
+}
+
+.shop-item-image {
+  height: 250px;
+  border-radius:15px;
+  border: 1px solid white;
+}
+
+.shop-item-details {
+  display: flex;
+  align-items: center;
+  padding: 5px;
+}
+
+.shop-item-price {
+  flex-grow: 1;
+  color: #fff;
+  margin: 10px;
+}
+
+.shop-item-title {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 20px;
+}
+
+.cart-header {
+  font-size: 1.25em;
+  color: #fff;
+}
+
+.cart-column {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid white;
+  margin-right: 1.5em;
+  padding-bottom: 10px;
+  margin-top: 10px;
+}
+
+.cart-row {
+  display: flex;
+  background:#3f3f3f;
+  border-radius: 5px;
+
+}
+
+.cart-item {
+  width: 45%;
+  padding-left: 20px;
+}
+
+.cart-price {
+  width: 20%;
+  font-size: 1.2em;
+  color: #fff;
+}
+
+.cart-quantity {
+  width: 35%;
+}
+
+.cart-item-title {
+  color: #fff;
+  margin-left: 0.5em;
+  font-size: 20px;
+  
+}
+
+
+.cart-quantity-input {
+  height: 34px;
+  width: 50px;
+  border-radius: 5px;
+  border: 1px solid #3f3f3f;
+  background-color: #eee;
+  color: #000;
+  padding: 0;
+  text-align: center;
+  font-size: 1.2em;
+  margin-right: 25px;
+}
+
+.cart-row:last-child {
+  border-bottom: 1px solid;
+}
+
+.cart-row:last-child .cart-column {
+  border: none;
+}
+
+.cart-total {
+  text-align: end;
+  margin-top: 30px;
+  margin-right: 10px;
+  background: #3f3f3f;
+  padding-right: 50px;
+}
+
+.cart-total-title {
+  font-weight: bold;
+  font-size: 1.5em;
+  color: #fff;
+  margin-right: 20px;
+}
+
+.cart-total-price {
+  color: #fff;
+  font-size: 1.1em;
+}
+
+.btn-purchase {
+  display: block;
+  margin: 40px auto 80px auto;
+  font-size: 20px;
 }
