--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     background-image: url(./images/food6.jpg);
     color: white;
+    font-family: sofia;
 }
 
 .container {
@@ -8,6 +9,7 @@ body {
     background-color: rgba(29, 28, 28, 0.637);
     margin: 100px 0px 0px 0px;
     padding: 100px;
+
 }
 
 button {
@@ -16,6 +18,7 @@ button {
     padding: 15px;
     margin: 10px;
     color: white;
+    font-family: sofia;
 }
 
 img {
@@ -30,12 +33,21 @@ img {
 
 .container {
    
-    margin: 45px 0px 0px 0px;
+    margin: 20px 0px 0px 0px;
   
 }
+
+
+
 }
 
 button a{
     color: white;
     text-decoration: none;
+
+}
+
+h1{
+    font-size: 40px;
+    text-align: center;
 }
