added font style and sized

--- a/menu/styles.css
+++ b/menu/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: sofia;
+  font-family: "sofia";
   background-color: #292929;
   padding: 0px 50px 0px 50px;
   color: white;
