--- a/home/styles.css
+++ b/home/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Sofia";
+  font-family: 'Poppins', sans-serif;
   background-color: #292929;
   padding: 0px 50px 0px 50px;
   color: white;
@@ -303,7 +303,7 @@ p a {
   background-color: #292929;
   border: #292929;
   padding: 10px;
-  font-family: sofia;
+  font-family: 'Poppins', sans-serif;
   font-size: 15px;
 }
 
