--- a/menu/styles.css
+++ b/menu/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "sofia";
+  font-family: 'Poppins', sans-serif;
   background-color: #292929;
   padding: 0px 50px 0px 50px;
   color: white;
@@ -437,4 +437,8 @@ input[type=text]:focus {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+.shop-item-button:hover{
+  background-color: #140e0e;
+  
 }
