--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     background-image: url(./images/food6.jpg);
     color: white;
-    font-family: "sofia";
+    font-family: 'Lemonada', cursive;
 }
 
 .container {
@@ -18,7 +18,7 @@ button {
     padding: 15px;
     margin: 10px;
     color: white;
-    font-family: "sofia";
+    font-family: 'Lemonada', cursive;
 }
 
 img {
